src/test/resources/should-fail/matrix-multiply.se
decl a: float[32][32 bank 32];
decl b: float[32 bank 32][32];
decl c: float[32][32];

for (let i = 0..32) {
  for (let j = 0..32) {
    for (let k = 0..32) unroll 32 {
      c[i][j] := a[i][k] * b[k][j] + c[i][j];
    }
  }
}
